# zdrowskit

./: .coverage  .env_example  .gitignore  AGENTS.md  CLAUDE.md  README.md  TODO  main.py  pyproject.toml
docs/: apple-health.md  commands.md  context-files.md  daemon.md  evals.md  limitations.md  llm.md  notifications.md  setup.md  telegram.md  testing.md
evals/: README.md  __init__.py  cache.py  framework.py  leaderboard.html  leaderboard.md  leaderboard.py  run.py  run_nudge_verify.py
launchd/: com.zdrowskit.daemon.plist
src/: aggregator.py  assembler.py  baselines.py  charts.py  cmd_coach.py  cmd_db.py  cmd_events.py  cmd_insights.py  cmd_llm.py  cmd_llm_common.py  cmd_llm_log.py  cmd_log_flow.py  cmd_models.py  cmd_notify.py  cmd_notify_interpreter.py  cmd_nudge.py  commands.py  config.py  context_edit.py  daemon.py  daemon_add_flow.py  daemon_agent_flow.py  daemon_claude_flow.py  daemon_log_flow.py  daemon_model_flow.py  daemon_notify_flow.py  daemon_runners.py  daemon_telegram_chat.py  events.py  feel_adjust.py  llm.py  llm_context.py  llm_health.py  llm_verify.py  log.py  milestones.py  model_prefs.py  models.py  notification_prefs.py  notify.py  (+5 more)
tests/: conftest.py  test_aggregator.py  test_assembler.py  test_baselines.py  test_charts.py  test_cmd_notify.py  test_commands.py  test_context_edit.py  test_daemon.py  test_daemon_agent_flow.py  test_daemon_claude_flow.py  test_evals_framework.py  test_evals_leaderboard.py  test_events.py  test_feedback_evals.py  test_feel_adjust.py  test_llm.py  test_llm_verify.py  test_manual_activity.py  test_milestones.py  test_model_prefs.py  test_notification_prefs.py  test_notify.py  test_parsers_gpx.py  test_parsers_metrics.py  test_report.py  (+7 more)
(+93 files in other folders)
