[project]
name = "zdrowskit"
version = "0.1.0"
description = "What Apple Health notifications should be."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kaleido>=1.0.0",
    "litellm",
    "markdown",
    "numpy",
    "plotly",
    "python-dotenv",
    "resend",
    "rich",
    "watchdog",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.15.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
