[project]
name = "zdrowskit"
version = "0.1.0"
description = "What Apple Health notifications should be."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kaleido==1.2.0",
    "litellm==1.83.13",
    "markdown==3.10.2",
    "numpy==2.4.3",
    "plotly==6.6.0",
    "python-dotenv==1.0.1",
    "resend==2.24.0",
    "rich==14.3.3",
    "watchdog==6.0.0",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "ruff==0.15.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
